# folkeregister-udrejse

./: .gitignore  README.md  changelog.md  migration.py  pyproject.toml
robot_framework/: config.py  process.py  reset.py
robot_framework/sub_process/: database.py  indkomst.py  nova.py  skat_webservice.py
