[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "1.4.0"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 3.*",
    "Pillow == 9.5.0",
    "pyodbc == 5.*",
    "itk-dev-shared-components == 2.*",
    "python-skat-webservice == 0.1.0",
    "hvac == 2.*",
    "itk_dev_event_log == 1.*"
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]
